--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "devDependencies": {
     "browser-sync": "2.27.7",
     "eslint": "8.7.0",
-    "eslint-config-htmlacademy": "5.0.0"
+    "eslint-config-htmlacademy": "5.0.0",
+    "leaflet": "^1.9.4"
   },
   "license": "MIT",
-  "dependencies": {},
   "scripts": {
     "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
     "lint": "eslint js/"
