--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "devDependencies": {
     "browser-sync": "2.27.7",
     "eslint": "8.7.0",
-    "eslint-config-htmlacademy": "5.0.0",
-    "leaflet": "^1.9.4"
+    "eslint-config-htmlacademy": "5.0.0"
   },
   "license": "MIT",
   "scripts": {
